# AdamR

./: README.md  pyproject.toml
adamwr/: adamwr.py
src/adamr/: __init__.py  adamr.py
